--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,12 +4,16 @@ on:
   push:
     tags: ["v*"]
 
+permissions:
+  pages: write
+  id-token: write
+
 jobs:
   publish:
     runs-on: macos-latest
-    permissions:
-      contents: read
-      packages: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -22,6 +26,49 @@ jobs:
           path: ~/.konan
           key: konan-${{ runner.os }}-${{ hashFiles('gradle/libs.versions.toml') }}
           restore-keys: konan-${{ runner.os }}-
-      - run: ./gradlew publish
+
+      - name: Download existing Pages content
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mkdir -p library/build/maven-repo
+          DEPLOY_URL=$(gh api "repos/${{ github.repository }}/pages" --jq '.html_url' 2>/dev/null) || true
+          if [ -n "$DEPLOY_URL" ]; then
+            ARTIFACT_URL=$(gh api "repos/${{ github.repository }}/pages/builds/latest" --jq '.url' 2>/dev/null) || true
+            # Download via wget mirror as the most reliable approach
+            wget --mirror --no-parent --no-host-directories --reject "index.html*" \
+              -P library/build/maven-repo/ "${DEPLOY_URL}" 2>/dev/null || true
+          fi
+
+      - run: ./gradlew publish
+
+      - name: Generate directory index pages
+        run: |
+          cd library/build/maven-repo
+          find . -type d | while read dir; do
+            (
+              cd "$dir"
+              echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Index of '"${dir#.}"'/</title></head><body>' > index.html
+              echo '<h1>Index of '"${dir#.}"'/</h1><hr><pre>' >> index.html
+              if [ "$dir" != "." ]; then
+                echo '<a href="../">../</a>' >> index.html
+              fi
+              for entry in $(ls -1 --group-directories-first 2>/dev/null || ls -1); do
+                [ "$entry" = "index.html" ] && continue
+                if [ -d "$entry" ]; then
+                  echo "<a href=\"$entry/\">$entry/</a>" >> index.html
+                else
+                  echo "<a href=\"$entry\">$entry</a>" >> index.html
+                fi
+              done
+              echo '</pre><hr></body></html>' >> index.html
+            )
+          done
+
+      - uses: actions/configure-pages@v5
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: library/build/maven-repo
+      - id: deploy
+        uses: actions/deploy-pages@v4
