Add kmp-io-kotlinx module with kotlinx-io Source/Sink ZIP adapters
Move core kmp-io into its own subproject. The new kmp-io-kotlinx module
provides adapters to create ZipInputStream/ZipOutputStream from
kotlinx-io Source/Sink types.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
         if: always()
         with:
           name: test-reports
-          path: build/reports/tests/
+          path: "**/build/reports/tests/"
       - uses: actions/upload-artifact@v4
         with:
           name: maven-artifacts
-          path: ~/.m2/repository/no/synth/kmp-io/
+          path: ~/.m2/repository/no/synth/
